Урок 27. Регистрация. Часть 1
Добавление в макет поля Account + стилизвция поля регистрации

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3319,3 +3319,12 @@ span.twitter-typeahead {
 }
 
 /*Search*/
+
+
+
+.drop > .btn-group > a {
+  color: #fff;
+  cursor: pointer;
+  position: relative;
+  top: -2px;
+}
