Урок 30 Регистрация. Часть 4
Добавление стилей для валидации

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1441,7 +1441,7 @@ a.mask {
 .account-left input[type="password"],
 .account-left input[type="email"],
 .account-left input[type="address"] {
-  width: 90%;
+  /* width: 90%; */
   margin: 0px;
   color: #000;
   background: none;
@@ -3327,4 +3327,21 @@ span.twitter-typeahead {
   cursor: pointer;
   position: relative;
   top: -2px;
+}
+
+form .has-success .form-control {
+  border-color: green;
+}
+
+form .has-error .form-control {
+  border-color: red;
+}
+
+.has-error .has-success {
+  position: relative;
+}
+
+.form-control-feedback {
+  right: 10px;
+  top: 25px;
 }
